2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/8.0/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.1/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.2/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.3/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.4/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/9.0/pqxx/config-internal-libpq.h,
 configitems, configure.ac.in, include/pqxx/config.h.in:
 - Remove configuration for missing PQmblen().
2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/8.0/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.1/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.2/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.3/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/8.4/pqxx/config-internal-libpq.h,
 config/sample-headers/libpq/9.0/pqxx/config-internal-libpq.h,
 configitems, configure.ac.in, include/pqxx/config.h.in,
 src/connection_base.cxx, src/util.cxx:
 - Remove workaround for missing PQcancel.
2015-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/SunStudio-8:
 - Remove support for Sun Studio 8.  It doesn't have reverse_iterator.
 config/sample-headers/compiler/MinGW-3.4/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2008/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/VisualStudio2010/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3-apple/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3-apple/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-3.3/config-public-compiler.h_strict,
 config/sample-headers/compiler/gcc-3.3/pqxx/config-public-compiler.h,
 config/sample-headers/compiler/gcc-4.2/pqxx/config-public-compiler.h,
 configitems, configure.ac.in, include/pqxx/binarystring.hxx,