@@ -1,6 +1,5 @@
 #define HAVE_SYS_TYPES_H 1
 #define HAVE_UNISTD_H 1
-#define PQXX_HAVE_COUNT_IF 1
 #define PQXX_HAVE_C_NAN 1
 #define PQXX_HAVE_DISTANCE 1
 #define PQXX_HAVE_GCC_VISIBILITY 1
